_includes/marketing-components/public/demo-style.css
@font-face {
	font-family: TT Norms Pro;
	src: url(/public/fonts/tt-norms-pro/regular.woff2) format("woff2");
	font-weight: 400;
	font-style: normal;
	font-display: swap
}

@font-face {
	font-family: TT Norms Pro;
	src: url(/public/fonts/tt-norms-pro/bold.woff2) format("woff2");
	font-weight: 800;
	font-style: normal;
	font-display: swap
}

:root {
	--demo-gutter: .75rem;
	--demo-font-family: TT Norms Pro, system-ui, sans-serif;
	--demo-font-family-mono: Consolas, Menlo, Monaco, Andale Mono, monospace;

	--demo-primary: hsl(220deg 97.26% 42.94%);
	--demo-primary-oppo: hsl(0deg 0% 100%);

	--demo-logo: var(--demo-primary);
	--demo-secondary: hsl(0deg 0% 100%);
	--demo-secondary-minor: hsl(0deg 0% 97%);
	--demo-secondary-oppo: hsl(0deg 0% 13%);
	--demo-border: hsl(0deg 0% 80%);
	--demo-footer-color: hsl(215deg 13.79% 34%);
	--demo-shadow-hsl: 0deg 0% 75%;

}
@media (prefers-color-scheme: dark) {
	:root {
		--demo-logo: hsl(0deg 0% 100%);
		--demo-secondary: hsl(0deg 0% 7%);
		--demo-secondary-minor: hsl(0deg 0% 0%);
		--demo-secondary-oppo: hsl(0deg 0% 88%);
		--demo-border: hsl(0deg 0% 20%);
		--demo-footer-color: hsl(215deg 13.79% 65.88%);
		--demo-shadow-hsl: 0deg 0% 20%;
	}
}


/* Defaults, some borrowed from https://andy-bell.co.uk/a-more-modern-css-reset/ */
* {
	box-sizing: border-box;
}
html {
	-moz-text-size-adjust: none;
	-webkit-text-size-adjust: none;
	text-size-adjust: none;
	color: var(--demo-secondary-oppo);
	background-color: var(--demo-secondary-minor);
	overflow-y: scroll;
}
body {
	font-family: var(--demo-font-family);
	margin: 0 auto;
	padding: 0 var(--demo-gutter);
	max-width: 64em;
	min-height: 100vh;
}

/* Defaults */
ul:not([role="list"]),
ol:not([role="list"]) {
	list-style-type: "";
}

h1, h2, h3, h4, h5 {
	font-weight: 800;
	text-wrap: balance;
}
:where(h1, h2, h3, h4, h5):first-child {
	margin-top: 0;
}

p:first-child {
	margin-top: 0;
}
p:last-child {
	margin-bottom: 0;
}
mark {
	padding: .125em .25em;
	border-radius: .25em;
}

a:where([href]) {
	color: inherit;
}

input, button,
textarea, select {
	font: inherit;
}

pre, code {
	font-family: var(--demo-font-family-mono);
	font-size: inherit;
}
pre {
	display: block;
	line-height: 1.5;
	overflow-x: auto;
}

table {
	border-collapse: collapse;
}
th, td {
	margin: 0;
	padding: .25em .5em;
}
thead tr,
tr:nth-child(2n) {
	background-color: var(--demo-secondary-minor);
}

:target {
	scroll-margin-block: 5ex;
}

svg {
	color: var(--demo-logo);
}

img {
	display: block;
	max-width: 100%;
	height: auto;
	vertical-align: middle;
}

blockquote {
	font-family: Georgia, serif;
	font-size: 1.125em; /* 18px /16 */
	font-style: italic;
	margin: 0;
}

hr {
	border: none;
	border-top: 1px solid var(--demo-border);
	margin: 1em 0;
}

.sr-only {
	position: absolute;
	height: 1px;
	width: 1px;
	overflow: hidden;
	clip: rect(1px, 1px, 1px, 1px);
}

/* Demo Styles */
.demo-main {
	padding: var(--demo-gutter);
	background-color: var(--demo-secondary);
	border: .125em solid var(--demo-border);
	border-radius: 0.625em; /* 10px /16 */
	margin: 1em 0;
}
@media (min-width: 68.75em) {
	.demo-main {
		margin-left: calc(-1 * var(--demo-gutter) - .125em);
	}
}

.demo-inset {
	margin-left: -.5em;
	margin-right: -.5em;
}

.demo-hed {
	display: flex;
	align-items: center;
	flex-wrap: wrap;
	gap: 1em 2em;
	margin: 1em 0;
}
.demo-hed > * {
	flex-grow: 1;
}

.demo-hed-title {
	flex-grow: 9999;
	margin: 0;
	text-wrap: balance;
}
.demo-hed-logo {
	display: flex;
}

.demo-nav {
	display: flex;
	justify-content: flex-end;
	gap: .5em 1em;
}

.demo-btn {
	font-weight: 800;
	padding: .5em 1.5em;
	border-radius: .5em;
	text-decoration: none;
	text-align: center;
}
.demo-btn-primary {
	background-color: var(--demo-primary);
	color: var(--demo-primary-oppo);
}
@media (max-width: 37.4375em) { /* 599px */
	.demo-nav .demo-btn:not(summary) {
		display: block;
		width: 100%;
	}
}

.demo-footer {
	margin: 1rem 0;
	color: var(--demo-footer-color);
}
.demo-footer a[href] {
	display: inline-block;
	min-width: 3em;
	padding: .5em 0;
}

.demo-banner {
	display: block;
	text-align: center;
	background-color: var(--demo-primary);
	color: var(--demo-primary-oppo);
	text-decoration: none;
	padding: .5em;
	padding-left: var(--demo-gutter);
	padding-right: var(--demo-gutter);
	margin-left: calc(-1 * var(--demo-gutter));
	margin-right: calc(-1 * var(--demo-gutter));
	margin-bottom: calc(3 * var(--demo-gutter));
	line-height: 1.3;
}
.demo-banner:hover,
.demo-banner:active {
	text-decoration: underline;;
}
.demo-banner:before {
	content: "";
	position: absolute;
	top: 0;
	left: 0;
	right: 0;
	height: 2.5em;
	background-color: inherit;
	z-index: -1;
}
.demo-icon {
	display: inline;
	width: auto;
	height: 1.3em;
	height: 1lh;
	object-fit: contain;
	margin-right: .5em;
	vertical-align: text-bottom;
}
.demo-icon-rounded {
	border-radius: .25em;
}

/* Overlay */
details[open].details-overlay {
	position: relative;
}
details.details-overlay summary {
	border: .125em solid;
	white-space: nowrap;
}
details[open].details-overlay > :not(summary) {
	overflow: hidden;
	position: absolute;
	margin-top: .25em;
	right: 0;
	padding: var(--demo-gutter);
	border: .125em solid var(--demo-border);
	border-radius: 0.625em; /* 10px /16 */
	background-color: var(--demo-secondary);
	white-space: nowrap;
	/* via https://www.joshwcomeau.com/shadow-palette/ */
	box-shadow: 0px 0.3px 0.5px hsl(var(--demo-shadow-hsl) / 0),
		0.1px 2.4px 3.6px hsl(var(--demo-shadow-hsl) / 0.07),
		0.1px 4.3px 6.5px hsl(var(--demo-shadow-hsl) / 0.14),
		0.2px 6.7px 10.1px hsl(var(--demo-shadow-hsl) / 0.22),
		0.3px 10.6px 15.9px hsl(var(--demo-shadow-hsl) / 0.29),
		0.5px 16.5px 24.8px hsl(var(--demo-shadow-hsl) / 0.36);
}

/* Lists */
.demo-list {
	padding: 0;
	margin: 0;
}
.demo-list a[href] {
	display: block;
	padding: var(--demo-gutter);
	margin-bottom: .25em;
}
.details-overlay .demo-list a[href] {
	margin-left: calc(-1 * var(--demo-gutter));
	margin-right: calc(-1 * var(--demo-gutter));
}
.demo-list a[href]:is(:hover, :active) {
	background-color: var(--demo-secondary-minor);
}
.demo-inline {
	display: inline-flex;
	align-items: center;
	flex-wrap: wrap;
	gap: .5em 1em;
	padding: 0;
	margin: 0;
}

/* Utility classes */
.demo-mb2 {
	margin-bottom: 1em;
}

